--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype>
-<html lang="en">
+<html lang="ch">
 <head>
 
     <title>MissThee</title>
@@ -33,7 +33,9 @@
 
     <!-- Stylin' -->
     <link rel="stylesheet" href="css/index.css"/>
-
+<!--    <script>-->
+<!--        console.log('lang!',navigator.language)-->
+<!--    </script>-->
 </head>
 <body>
 
@@ -47,37 +49,37 @@
 </div>
 
 <div id="content">
-    <div class="section">•THINGS YOU CAN PLAY•</div>
+    <div class="section">•游戏试玩•</div>
 
     <a href="https://mc.missthee.ink" target="_blank">
         <div>
             <img src="img/THREE.JS MINECRAFT.png" alt=""/>
-            <div>three.js minecraft<span> – minecraft static web page via three.js</span></div>
+            <div>three.js我的世界<span> – three.js构建的简易我的世界静态页</span></div>
         </div>
     </a>
 
     <div style="clear:both"></div>
 
-    <div class="section">•STUFF YOU CAN VIEW•</div>
+    <div class="section">•杂物预览•</div>
 
 	<a href="https://missthee.github.io/page" target="_blank">
 		<div>
 			<img src="img/GITUB FILE TREE.png"/>
-			<div>gitub file tree<span> - view github file in tree mode</span></div>
+			<div>github文件树浏览<span> - 树状视图形式展示github仓库文件</span></div>
 		</div>
 	</a>
 
-    <a href="https://missthee.github.io/vue-element-sample/dist/index.html">
+    <a href="https://missthee.github.io/vue-element-sample/dist/index.html" target="_blank">
         <div>
             <img src="img/VUE ELEMENTUI SAMPLE.png"/>
-            <div>vue elementui sample<span> – a vue elementui admin page demo</span></div>
+            <div>后台管理实例<span> – vue与elementui搭建的后台管理页面</span></div>
         </div>
     </a>
 
-	<a href="https://missthee.github.io/simple-big-data-table/src/big-data-table.html">
+	<a href="https://missthee.github.io/simple-big-data-table/src/big-data-table.html" target="_blank">
 		<div>
 			<img src="img/SIMPLE BIG DATA TABLE.png"/>
-			<div>simple big data table<span> – a simple way to build bigdata table</span></div>
+			<div>简单大数据表格<span> – 动态渲染数据行的大数据表格</span></div>
 		</div>
 	</a>
 
