--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
         </div>
     </a>
 
+    <a href="http://missthee.ink/elementui-table-cell-edit/dist/index.html" target="_blank">
+        <div>
+            <img src="img/TABLE CELL EDIT.png"/>
+            <div>表格行内编辑<span> – elementui表格行内编辑</span></div>
+        </div>
+    </a>
+
 	<a href="https://missthee.github.io/simple-big-data-table/src/big-data-table.html" target="_blank">
 		<div>
 			<img src="img/SIMPLE BIG DATA TABLE.png"/>
