--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="content">
     <div class="section">•游戏试玩•</div>
 
-    <a href="https://mc.missthee.ink" target="_blank">
+    <a href="https://missthee.github.io/threejs-minecraft/dist/index.html" target="_blank">
         <div>
             <img src="img/THREE.JS MINECRAFT.png" alt=""/>
             <div>three.js我的世界<span> – three.js构建的简易我的世界静态页</span></div>
@@ -76,7 +76,7 @@
         </div>
     </a>
 
-    <a href="http://missthee.ink/elementui-table-cell-edit/dist/index.html" target="_blank">
+    <a href="https://missthee.github.io/elementui-table-cell-edit/dist/index.html" target="_blank">
         <div>
             <img src="img/TABLE CELL EDIT.png"/>
             <div>表格行内编辑<span> – elementui表格行内编辑</span></div>
