--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="MissThee">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://missthee.ink">
+    <meta property="og:url" content="https://missthee.com">
     <!--		<meta property="og:image" content="https://ncase.me/sharing/thumb.png">-->
     <meta property="og:description" content="MissThee's personal website">
 
@@ -62,6 +62,27 @@
 
     <div class="section">•杂物预览•</div>
 
+    <a href="https://missthee.github.io/elementui-table-cell-edit/dist/index.html" target="_blank">
+        <div>
+            <img src="img/TABLE CELL EDIT.png"/>
+            <div>表格行内编辑<span> – elementui表格行内编辑</span></div>
+        </div>
+    </a>
+
+    <a href="https://missthee.github.io/simple-big-data-table/src/big-data-table.html" target="_blank">
+        <div>
+            <img src="img/SIMPLE BIG DATA TABLE.png"/>
+            <div>简单大数据表格<span> – 动态渲染数据行的大数据表格</span></div>
+        </div>
+    </a>
+
+    <a href="https://missthee.github.io/pixel-pad/index.html" target="_blank">
+        <div>
+            <img src="img/PIXEL.png"/>
+            <div>像素画板<span> – canvas像素画板</span></div>
+        </div>
+    </a>
+
 	<a href="https://missthee.github.io/page" target="_blank">
 		<div>
 			<img src="img/GITUB FILE TREE.png"/>
@@ -76,22 +97,10 @@
         </div>
     </a>
 
-    <a href="https://missthee.github.io/elementui-table-cell-edit/dist/index.html" target="_blank">
-        <div>
-            <img src="img/TABLE CELL EDIT.png"/>
-            <div>表格行内编辑<span> – elementui表格行内编辑</span></div>
-        </div>
-    </a>
-
-	<a href="https://missthee.github.io/simple-big-data-table/src/big-data-table.html" target="_blank">
-		<div>
-			<img src="img/SIMPLE BIG DATA TABLE.png"/>
-			<div>简单大数据表格<span> – 动态渲染数据行的大数据表格</span></div>
-		</div>
-	</a>
-
-
     <div style="clear:both"></div>
+
+    <div class="section">•后台工程•</div>
+
     <br>
 
 
@@ -106,7 +115,7 @@
                 'missthee' + '&' + '#' + '6' + '4' + ';' + 'i' + 'c' + 'l' + '&' + '#' + '1' + '1' + '1' + ';' + 'u' + 'd' + '&' + '#' + '4' + '6' + ';' + 'com' +
                 '<' + '/' + 'a' + '>');</script>
             <br>
-            <span style="color:#555;">this site is <a style="color:#888" href="https://github.com/ncase/ncase.github.io">open source</a>, zero rights reserved, original designed by <a style="color:#888" href="https://ncase.me/">Nicky Case</a>.</span>
+<!--            <span style="color:#555;">this site is <a style="color:#888" href="https://github.com/ncase/ncase.github.io">open source</a>, zero rights reserved, original designed by <a style="color:#888" href="https://ncase.me/">Nicky Case</a>.</span>-->
         </div>
     </div>
 </div>
