--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
 
     <div style="clear:both"></div>
 
-    <div class="section">•后台工程•</div>
+    <div class="section">•工程开发•</div>
+
+    <a href="https://github.com/MissThee/simple-deploy" target="_blank">
+        <div>
+            <img src="img/SIMPLE DEPLOY.png"/>
+            <div>nodejs自动部署工具<span> – 根据配置进行多环境打包、文件分发、文件清理</span></div>
+        </div>
+    </a>
 
     <br>
 
